<resources>
    <string name="app_name">Assignment 2</string>
    <string name="registration">Registration</string>
    <string name="lastname">Last Name</string>
    <string name="middlename">Middle Name</string>
    <string name="firstname">First Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="skills">Skills</string>
    <string name="submit">SUBMIT</string>
    <string name="mobileNumber">Mobile Number</string>
</resources>